[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/level_complete.gd" type="Script" id=1]
[ext_resource path="res://screens/sprites/background_3.jpg" type="Texture" id=2]
[ext_resource path="res://screens/sprites/gold_medal.png" type="Texture" id=3]
[ext_resource path="res://screens/sprites/bronze_medal.png" type="Texture" id=4]
[ext_resource path="res://screens/sprites/silver_medal.png" type="Texture" id=5]

[node name="LevelComplete" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background3" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -29.0
margin_right = 54.0
margin_bottom = -10.0
text = "Level complete
TODO: GRADE SCORE"

[node name="NextLevelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = 17.0
margin_right = 38.5
margin_bottom = 37.0
text = "Next level"

[node name="BronzeMedal" type="Sprite" parent="."]
position = Vector2( 304, 168 )
texture = ExtResource( 4 )

[node name="GoldMedal" type="Sprite" parent="."]
position = Vector2( 528, 168 )
texture = ExtResource( 3 )

[node name="SilverMedal" type="Sprite" parent="."]
position = Vector2( 408, 168 )
texture = ExtResource( 5 )

[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
